--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Matthew Fahey
 description: Year 9 Student At Dr. Challoners Grammar School
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSx1McGmPJXHSoP4hym2BAT9-p34m6pwmii8V_GjRKOQv5qy-sEJQ
 
 #
 # Flags below are optional
